<resources>
    <string name="app_name">DMLT-MOB Online</string>
    <string name="login_title">Log In</string>
    <string name="main_title">DMLT-MOB Online</string>
    <string name="kunjungan_title">Kunjungan</string>
    <string name="biaya_bbm_title">Biaya BBM</string>
    <string name="produk_title">Pilih Produk</string>
    <string name="penjualan_title">Penjualan</string>
    <string name="laporan_title">Laporan</string>
    <string name="laporan_detail_title">Laporan Detail</string>

    <string name="Imei">IMEI Number</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">LOG IN</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <string name="ip_num">IP Number</string>
    <string name="path_folder">Folder Name</string>
    <string name="bt_save">Save</string>
    <string name="setting_title">Setting</string>
    <string name="absensi_title">Absensi</string>
    <string name="bt_absensi">Simpan Absensi</string>
    <string name="bt_kunjungan">Simpan Kunjungan</string>
    <string name="bt_penjualan">Simpan Penjualan</string>

    <string name="txt_menu_logout">Log Out</string>
    <string name="txt_menu_about">Tentang Kami</string>
    <string name="txt_menu_pointing">Pointing</string>
    <string name="txt_menu_absen">Absensi</string>
    <string name="txt_menu_lap">Laporan</string>
    <string name="txt_menu_slipgaji">Slip Gaji</string>
    <string name="txt_menu_biayabbm">Biaya BBM</string>
    <string name="txt_menu_penjualan">Penjualan</string>
    <string name="txt_menu_kunjungan">Kunjungan</string>
    <string name="txt_menu_approval">Approval</string>
    <string name="txt_menu_takeLeave">Cuti</string>

    <string name="txt_odometer">Odometer</string>
    <string name="txt_namaoutlet">Nama Outlet</string>
    <string name="txt_ket">Keterangan</string>
    <string name="txt_absensi">Absensi</string>
    <string name="txt_masuk">Masuk</string>
    <string name="txt_pulang">Pulang</string>
    <string name="txt_photo">Photo</string>
    <string name="txt_id_transaksi">No. Transaksi</string>
    <string name="txt_selesai">Selesai</string>
    <string name="txt_tanggal">Tanggal</string>
    <string name="txt_cari">Cari</string>
    <string name="txt_status_gps">Status Koordinat: </string>
    <string name="tanggalAwal">Tanggal Awal</string>
    <string name="tanggalAkhir">Tanggal Akhir</string>
    <string name="tanggal">Tanggal</string>
    <string name="selanjutnya">Selanjutnya</string>


    <string name="start_updates">START LOCATION UPDATES</string>
    <string name="stop_updates">STOP LOCATION UPDATES</string>
    <string name="get_last_location">GET LAST LOCATION</string>

    <string name="turn_off_flashlight">FlashLight on</string>
    <string name="turn_on_flashlight">flashLight off</string>
    <string name="title_activity_main">QR and Barcode Scanner</string>
    <string name="message">Place a barcode inside the viewfinder rectangle to scan it.</string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="masuk">Masuk</string>
    <string name="pulang">Pulang</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="menu_self_service">Menu Self-Service</string>
    <string name="information">Information</string>
    <string name="input_bbm">Input BBM</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="pengajuan">Pengajuan</string>
    <string name="no_surat">No. Surat</string>
    <string name="nama_user">Nama User</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
    <string name="bank">Bank</string>
    <string name="no_rekening">No Rekening</string>
    <string name="email">Email</string>
    <string name="no_handphone">No Handphone</string>
    <string name="npwp">NPWP</string>
    <string name="kk">KK</string>
    <string name="ktp">KTP</string>
    <string name="alamat">Alamat</string>
    <string name="edit_changes">Edit Changes</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="kota_tujuan">Kota Tujuan</string>

    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="jenis_pengajuan">Jenis Pengajuan</string>
    <string name="sisa_cuti">Sisa cuti yang dimiliki : </string>

    <string-array name="pengajuan">
        <item>Cuti</item>
        <item>Ijin</item>
        <item>Sakit</item>
        <item>Lembur</item>
        <item>Cuti Khusus</item>
        <item>Perjalanan Dinas</item>
    </string-array>
</resources>