<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainConstraintLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#fff">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="567dp"
        android:id="@+id/v_guideline1"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1015625"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="39dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="567dp"
        android:id="@+id/v_guideline2"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="349dp"
        app:layout_constraintGuide_percent="0.9088542"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="384dp"
        android:layout_height="0dp"
        android:id="@+id/h_guideline1"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="61dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.107583776"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:id="@+id/h_guideline2"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="174dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.3068783"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:id="@+id/h_guideline3"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="228dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.4021164"/>

    <!--app:srcCompat="@drawable/logo_app"-->
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/logoappandrosalesnew4"
        android:id="@+id/fbCoverImageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/h_guideline2"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="@id/h_guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <!--change with image-->


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_self_service"
                    android:textSize="18sp"
                    android:layout_margin="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="2"
                    android:layout_marginStart="10dp">

                    <Button
                        android:id="@+id/bt_absen"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:background="@drawable/circle"
                        android:drawableTop="@mipmap/ic_absen"
                        android:paddingBottom="0dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_margin="10dp"
                        android:paddingTop="21dp"
                        android:layout_weight="1"
                        android:text="@string/txt_menu_absen"
                        android:textColor="@android:color/black" />

                    <Button
                        android:id="@+id/bt_penjualan"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:background="@drawable/circle"
                        android:drawableTop="@mipmap/ic_buy"
                        android:paddingBottom="0dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:paddingTop="21dp"
                        android:text="@string/txt_menu_penjualan"
                        android:textColor="@android:color/black" />

                    <Button
                        android:id="@+id/bt_kunjungan"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:background="@drawable/circle"
                        android:drawableTop="@mipmap/ic_store"
                        android:paddingBottom="0dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:paddingTop="21dp"
                        android:text="@string/txt_menu_kunjungan"
                        android:textColor="@android:color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="2"
                    android:layout_marginStart="10dp">

                    <Button
                        android:id="@+id/bt_BBM"
                        android:layout_marginTop="10dp"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/circle"
                        android:drawableTop="@drawable/odometer"
                        android:paddingBottom="0dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:paddingTop="21dp"
                        android:text="Odometer"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center" />

                    <Button
                        android:id="@+id/bt_takeLeave"
                        android:layout_marginTop="10dp"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/circle"
                        android:drawableTop="@drawable/pengajuan"
                        android:paddingBottom="0dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:paddingTop="21dp"
                        android:text="@string/pengajuan"
                        android:textSize="12sp"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center" />

                    <Button
                        android:id="@+id/bt_Approval"
                        android:layout_marginTop="10dp"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/circle"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/approval"
                        android:paddingBottom="0dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="21dp"
                        android:text="@string/txt_menu_approval"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information"
                    android:textSize="18sp"
                    android:layout_margin="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bt_laporan"
                        android:layout_marginTop="10dp"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/circle"
                        android:drawableTop="@mipmap/ic_lap"
                        android:paddingBottom="0dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:paddingTop="21dp"
                        android:text="@string/txt_menu_lap"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center" />

                    <Button
                        android:id="@+id/bt_biaya_bbm"
                        android:layout_marginTop="10dp"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/circle"
                        android:drawableTop="@mipmap/ic_bbm"
                        android:paddingBottom="0dp"
                        android:paddingLeft="10dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:paddingRight="10dp"
                        android:paddingTop="21dp"
                        android:text="@string/txt_menu_biayabbm"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center" />


                    <Button
                        android:layout_marginTop="10dp"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/circle"
                        android:drawableTop="@mipmap/ic_logout"
                        android:paddingBottom="0dp"
                        android:paddingLeft="10dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:paddingRight="10dp"
                        android:paddingTop="21dp"
                        android:text="@string/txt_menu_logout"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        android:onClick="logOut"/>


                    <Button
                        android:id="@+id/bt_kunjunganQR"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:background="@drawable/circle"
                        android:drawableTop="@mipmap/ic_store"
                        android:paddingLeft="5dp"
                        android:paddingTop="21dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="0dp"
                        android:text="@string/txt_menu_kunjungan"
                        android:textColor="@android:color/black"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/bt_slipGaji"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/circle"
                        android:drawableTop="@mipmap/ic_lap"
                        android:paddingLeft="10dp"
                        android:paddingTop="21dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="0dp"
                        android:text="@string/txt_menu_slipgaji"
                        android:textColor="@android:color/black"
                        android:visibility="gone" />

                </LinearLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/langTextView"
        app:layout_constraintRight_toLeftOf="@+id/v_guideline2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/v_guideline1"
        android:textColor="@android:color/darker_gray"
        android:layout_marginBottom="16dp"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
